// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryExecutor methods execute multiple errors should yield multiple validation errors 1`] = `
Object {
  "errors": Array [
    [Error: boom1],
    [Error: boom2],
  ],
  "message": "multiple errors",
  "name": "Error",
  "status": 504,
}
`;

exports[`QueryExecutor methods execute validation errors should yield validation error 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Cannot query field "yolo" on type "RootQuery".],
  ],
  "message": "validation error",
  "status": 400,
}
`;

exports[`QueryExecutor methods subscribe should throw validation error for unsupported subscription 1`] = `
Object {
  "errors": Array [
    [GraphQLError: Cannot query field "yolo" on type "RootSubscription".],
  ],
  "message": "validation error",
  "status": 400,
}
`;

exports[`QueryExecutor statics parseQuery should parse a valid query 1`] = `
Object {
  "definitions": Array [
    Object {
      "directives": Array [],
      "kind": "OperationDefinition",
      "loc": Object {
        "end": 31,
        "start": 0,
      },
      "name": Object {
        "kind": "Name",
        "loc": Object {
          "end": 15,
          "start": 6,
        },
        "value": "UserQuery",
      },
      "operation": "query",
      "selectionSet": Object {
        "kind": "SelectionSet",
        "loc": Object {
          "end": 31,
          "start": 16,
        },
        "selections": Array [
          Object {
            "alias": undefined,
            "arguments": Array [],
            "directives": Array [],
            "kind": "Field",
            "loc": Object {
              "end": 29,
              "start": 18,
            },
            "name": Object {
              "kind": "Name",
              "loc": Object {
                "end": 22,
                "start": 18,
              },
              "value": "user",
            },
            "selectionSet": Object {
              "kind": "SelectionSet",
              "loc": Object {
                "end": 29,
                "start": 23,
              },
              "selections": Array [
                Object {
                  "alias": undefined,
                  "arguments": Array [],
                  "directives": Array [],
                  "kind": "Field",
                  "loc": Object {
                    "end": 27,
                    "start": 25,
                  },
                  "name": Object {
                    "kind": "Name",
                    "loc": Object {
                      "end": 27,
                      "start": 25,
                    },
                    "value": "id",
                  },
                  "selectionSet": undefined,
                },
              ],
            },
          },
        ],
      },
      "variableDefinitions": Array [],
    },
  ],
  "kind": "Document",
  "loc": Object {
    "end": 31,
    "start": 0,
  },
}
`;

exports[`QueryExecutor statics parseQuery should throw an error for an invalid query 1`] = `[GraphQLError: Syntax Error: Expected {, found <EOF>]`;
